fixed extra grid cell on mobile

--- a/src/styles/navgallery.module.scss
+++ b/src/styles/navgallery.module.scss
@@ -1,7 +1,7 @@
 @media (max-width: 500px) {
     .nav-grid {
         display: grid;
-        grid-template-rows: repeat(6, 300px);
+        grid-template-rows: repeat(5, 300px);
         grid-gap: 20px;
 
     }
